# deepOrc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_workers.py  003_worker_incus_server_cert.py  004_worker_enrollment.py  005_worker_enrollment_secrets.py  006_peer_groups.py  007_gateway_egress_geo.py  008_egress_updated_at.py
cmd/gateway-agent/: go.mod  main.go
deploy/: Caddyfile.example  Caddyfile.template  Dockerfile  README.md  bootstrap-cleanup.sh  bootstrap-incus.sh  bootstrap-vps.sh  bootstrap-worker-vps.sh  build-gateway-agent-go.sh  build-gateway-agent-wheel.sh  build-gateway-golden-image.sh  build-worker-bundle.sh  cloudflare-setup.sh  deeporc-worker-net-up.sh  dio-repair-gw-015.sh  docker-compose.yml  exit-host-cleanup.sh  export-gateway-golden.sh  export-openwrt-base.sh  firewall-nft.sh  firewall-worker-nft.sh  gateway-golden-build.yaml  headscale-config.yaml.example  headscale-config.yaml.template  headscale-keys.sh  headscale-policy.hujson  headscale-worker-key.sh  import-bundled-images.sh  install-app.sh  install-caddy.sh  install-deeporc-worker-net.sh  install-tailscale-static.sh  install-worker-heartbeat.sh  join-worker.sh  obtain-tls-cert.sh  orchestrator.env.example  publish-packages.sh  push-worker-bundle.sh  quick-cp.sh  register-worker-on-cp.sh  (+13 more)
deploy/lib/: common.sh  (+1 more)
gateway_agent/: __init__.py  config.py  health.py  main.py  nft_handler.py  tailscale_handler.py  wg_handler.py
orchestrator/: __init__.py  config.py  crypto.py  main.py  naming.py
(+137 files in other folders)
