[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdi-orchestrator"
version = "0.2.0"
description = "VDI traffic orchestrator via WireGuard gateways and Tailscale exit nodes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "jinja2>=3.1.4",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[project.scripts]
orchestrator = "orchestrator.main:cli"
gateway-agent = "gateway_agent.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "gateway_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"
